# rs-dfu

./: Cargo.toml  README.md  build.rs  package.sh
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: error.rs  main.rs  write.rs
cmake/: rs_dfu-config.cmake
dfu/: Cargo.toml
examples/cpp/: CMakeLists.txt  main.cpp
src/: lib.rs
