[package]
name = "rdfu"
version = "0.7.1"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2"
parse-size = "1.1"
dfu = { path = "../dfu" }
uf2 = { path = "../uf2" }
env_logger = { workspace = true }
log = { workspace = true }
nusb = { workspace = true }
